Fixed z-index in NavBar (was above modal)

--- a/frontend/src/components/NavBar/NavBar.module.css
+++ b/frontend/src/components/NavBar/NavBar.module.css
@@ -5,7 +5,7 @@
   background-color: #b66d00;
   width: 100%;
   height: 3rem;
-  z-index: 9999;
+  z-index: 5;
 }
 
 .list {
